--- a/Rabbit.IOnline/Views/Home/About.cshtml
+++ b/Rabbit.IOnline/Views/Home/About.cshtml
@@ -2,5 +2,7 @@
     ViewBag.Title = "About";
 }
 
-<h2>About</h2>
-
+<ol class="breadcrumb">
+    <li><a href="@Url.Action("List", "Message")">List messages</a></li>
+    <li class="active">About</li>
+</ol>
