--- a/Rabbit.IOnline/Views/Message/List.cshtml
+++ b/Rabbit.IOnline/Views/Message/List.cshtml
@@ -1,8 +1,7 @@
 ﻿@{
     ViewBag.Title = "List";
 }
-@using Rabbit.IWasThere.Models.ViewModels
-@model ListViewModel
+@model Rabbit.IOnline.Models.ViewModels.ListViewModel
 
 <h2>List</h2>
 
