--- a/Rabbit.IOnline/Views/Home/Index.cshtml
+++ b/Rabbit.IOnline/Views/Home/Index.cshtml
@@ -2,17 +2,36 @@
     ViewBag.Title = "Index";
 }
 
-@using Rabbit.IWasThere.Models.ViewModels
+@using Rabbit.IOnline.Models.ViewModels
 
 @model IndexViewModel
 
-<h2>Welcome</h2>
+<div class="well well-sm padding-10">
+    <p class="text-justify">
+        A public place which stores your message of anything. You can leave a message there and it will be kept for so long.
+    </p>
+</div>
 
-<div>
-    <button class="btn btn-primary" type="button">
-        Messages <span class="badge">@Model.MessageCount</span>
-    </button>
+<div class="clearfix">
+    <div class="pull-left width-30p">
+        <h3>Site credits</h3>
+        <div>
+            <button class="btn btn-primary" type="button">
+                Messages <span class="badge">@Model.MessageCount</span>
+            </button>
+        </div>
+        <div>
+            <a href="@Url.Action("List", "Message")">
+                <span class="glyphicon glyphicon-menu-right"></span>
+                List all messages
+            </a>
+        </div>
+    </div>
+    <div class="pull-left width-70p">
+        <h3>Write a message <small>of whatever you want to leave</small></h3>
+        <div>
+            @{Html.RenderPartial("MessageEditForm", new EditMessageViewModel());}
+        </div>
+    </div>
 </div>
-<div>
-    <a href="@Url.Action("List", "Home")">List all messages</a>
-</div>
+
