--- a/Rabbit.IOnline/Views/Shared/_Layout.cshtml
+++ b/Rabbit.IOnline/Views/Shared/_Layout.cshtml
@@ -13,11 +13,10 @@
             <nav>
                 <ul class="nav nav-pills pull-right">
                     <li role="presentation" class="active"><a href="/">Home</a></li>
-                    <li role="presentation"><a href="#">About</a></li>
-                    <li role="presentation"><a href="#">Contact</a></li>
+                    <li role="presentation"><a href="@Url.Action("About")">About</a></li>
                 </ul>
             </nav>
-            <h3 class="text-muted">Project name</h3>
+            <h3 class="text-muted">IOnline Space</h3>
         </div>
 
         @RenderBody()
