--- a/Rabbit.IOnline/Views/Shared/_Layout.cshtml
+++ b/Rabbit.IOnline/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/bootstrap")
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/cssbox")
 </head>
 <body>
     <div class="container">
