--- a/Rabbit.IOnline/Views/Message/List.cshtml
+++ b/Rabbit.IOnline/Views/Message/List.cshtml
@@ -1,12 +1,45 @@
 ﻿@{
     ViewBag.Title = "List";
 }
+
 @model Rabbit.IOnline.Models.ViewModels.ListViewModel
 
-<h2>List</h2>
+<ol class="breadcrumb">
+    <li><a href="/">Home</a></li>
+    <li class="active">List of messages</li>
+</ol>
 
 <div>
     <button class="btn btn-primary" type="button">
         Messages <span class="badge">@Model.MessageCount</span>
     </button>
+</div>
+
+<div>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>Message</th>
+                <th>Created at</th>
+            </tr>
+        </thead>
+        <tbody>
+            @{
+                var index = Model.StartIndex;
+            }
+            @foreach (var message in Model.Messages)
+            {
+                index += 1;
+                
+                <tr>
+                    <td>
+                        <a href="@Url.Action("Detail", "Message", new { message.Id })">@index</a>
+                    </td>
+                    <td>@message.Body</td>
+                    <td>@message.CreatedAt</td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </div>
