--- a/Rabbit.IOnline/Views/Message/List.cshtml
+++ b/Rabbit.IOnline/Views/Message/List.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
     ViewBag.Title = "List";
 }
+@using Rabbit.IOnline.Models.ViewModels
 
-@model Rabbit.IOnline.Models.ViewModels.ListViewModel
+@model ListViewModel
 
 <ol class="breadcrumb">
     <li><a href="/">Home</a></li>
@@ -16,30 +17,5 @@
 </div>
 
 <div>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>Message</th>
-                <th>Created at</th>
-            </tr>
-        </thead>
-        <tbody>
-            @{
-                var index = Model.StartIndex;
-            }
-            @foreach (var message in Model.Messages)
-            {
-                index += 1;
-                
-                <tr>
-                    <td>
-                        <a href="@Url.Action("Detail", "Message", new { message.Id })">@index</a>
-                    </td>
-                    <td>@message.Body</td>
-                    <td>@message.CreatedAt</td>
-                </tr>
-            }
-        </tbody>
-    </table>
+    @{Html.RenderPartial("_MessageList", Model);}
 </div>
