--- a/Rabbit.IOnline/Views/Shared/_Layout.cshtml
+++ b/Rabbit.IOnline/Views/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jquery.unobtrusive-ajax")
     @RenderSection("scripts", required: false)
 </body>
 </html>
