--- a/Rabbit.IOnline/Views/Home/Index.cshtml
+++ b/Rabbit.IOnline/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
     <div class="pull-left width-70p">
         <h3>Write a message <small>of whatever you want to leave</small></h3>
         <div>
-            @{Html.RenderPartial("MessageEditForm", new EditMessageViewModel());}
+            @{Html.RenderPartial("_MessageEditForm", new EditMessageViewModel());}
         </div>
     </div>
 </div>
