--- a/Rabbit.IOnline/Views/Shared/_MessageEditForm.cshtml
+++ b/Rabbit.IOnline/Views/Shared/_MessageEditForm.cshtml
@@ -1,8 +1,15 @@
-﻿@model Rabbit.IOnline.Models.ViewModels.EditMessageViewModel
+﻿@using Rabbit.IOnline.Models.ViewModels
+@using Recaptcha.Web
+@using Recaptcha.Web.Mvc;
+
+@model EditMessageViewModel
 
 <form action="@Url.Action("Save", "Message")" enctype="multipart/form-data" method="POST">
     <div class="form-group">
         @Html.TextAreaFor(m => m.Body, new { @class = "form-control" })
     </div>
+
+    @Html.Recaptcha(theme: RecaptchaTheme.Clean)
+
     <button type="submit" class="btn btn-default">Submit</button>
 </form>
