--- a/Rabbit.IOnline/Views/Shared/_MessageEditForm.cshtml
+++ b/Rabbit.IOnline/Views/Shared/_MessageEditForm.cshtml
@@ -11,6 +11,10 @@
         @Html.TextAreaFor(m => m.Body, new { @class = "form-control" })
     </div>
 
+    <div class="form-group">
+        @Html.DropDownListFor(m => m.CategoryId, Model.Categories, new { @class = "form-control" })
+    </div>
+
     @Html.Recaptcha(theme: RecaptchaTheme.Clean)
 
     <button type="submit" class="btn btn-default">Submit</button>
