--- a/Rabbit.IOnline/Content/cssbox.css
+++ b/Rabbit.IOnline/Content/cssbox.css
@@ -27,6 +27,62 @@
     padding: 80px;
 }
 
+.padding-t-20 {
+    padding-top: 20px;
+}
+
+.padding-t-30 {
+    padding-top: 30px;
+}
+
+.padding-t-40 {
+    padding-top: 40px;
+}
+
+.padding-t-50 {
+    padding-top: 50px;
+}
+
+.padding-t-60 {
+    padding-top: 60px;
+}
+
+.padding-t-70 {
+    padding-top: 70px;
+}
+
+.padding-t-80 {
+    padding-top: 80px;
+}
+
+.padding-b-20 {
+    padding-bottom: 20px;
+}
+
+.padding-b-30 {
+    padding-bottom: 30px;
+}
+
+.padding-b-40 {
+    padding-bottom: 40px;
+}
+
+.padding-b-50 {
+    padding-bottom: 50px;
+}
+
+.padding-b-60 {
+    padding-bottom: 60px;
+}
+
+.padding-b-70 {
+    padding-bottom: 70px;
+}
+
+.padding-b-80 {
+    padding-bottom: 80px;
+}
+
 /* MARGIN */
 .margin-20 {
     margin: 20px;
@@ -54,6 +110,62 @@
 
 .margin-80 {
     margin: 80px;
+}
+
+.margin-t-20 {
+    margin-top: 20px;
+}
+
+.margin-t-30 {
+    margin-top: 30px;
+}
+
+.margin-t-40 {
+    margin-top: 40px;
+}
+
+.margin-t-50 {
+    margin-top: 50px;
+}
+
+.margin-t-60 {
+    margin-top: 60px;
+}
+
+.margin-t-70 {
+    margin-top: 70px;
+}
+
+.margin-t-80 {
+    margin-top: 80px;
+}
+
+.margin-b-20 {
+    margin-bottom: 20px;
+}
+
+.margin-b-30 {
+    margin-bottom: 30px;
+}
+
+.margin-b-40 {
+    margin-bottom: 40px;
+}
+
+.margin-b-50 {
+    margin-bottom: 50px;
+}
+
+.margin-b-60 {
+    margin-bottom: 60px;
+}
+
+.margin-b-70 {
+    margin-bottom: 70px;
+}
+
+.margin-b-80 {
+    margin-bottom: 80px;
 }
 
 /* HEIGHT */
