--- a/Rabbit.IOnline/Views/Shared/_Layout.cshtml
+++ b/Rabbit.IOnline/Views/Shared/_Layout.cshtml
@@ -15,6 +15,12 @@
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/cssbox")
 
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jquery-unobtrusive-ajax")
+    @Scripts.Render("~/bundles/showdown")
+    @Scripts.Render("~/bundles/showndown-preview")
+    @RenderSection("scripts", required: false)
+
     <script type="text/javascript">
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
@@ -43,9 +49,5 @@
 
         @RenderBody()
     </div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jquery-unobtrusive-ajax")
-    @RenderSection("scripts", required: false)
 </body>
 </html>
