--- a/Rabbit.IOnline/Views/Home/About.cshtml
+++ b/Rabbit.IOnline/Views/Home/About.cshtml
@@ -4,7 +4,7 @@
 @model string
 
 <ol class="breadcrumb">
-    <li><a href="@Url.Action("List", "Message")">List messages</a></li>
+    <li><a href="/">Home</a></li>
     <li class="active">About</li>
 </ol>
 
