--- a/Rabbit.IOnline/Views/Shared/_MessageList.cshtml
+++ b/Rabbit.IOnline/Views/Shared/_MessageList.cshtml
@@ -7,7 +7,7 @@
     <thead>
         <tr>
             <th>#</th>
-            <td>Category</td>
+            <th>Category</th>
             <th>Message</th>
             <th>Created at</th>
         </tr>
