--- a/Rabbit.IOnline/Views/Shared/_Layout.cshtml
+++ b/Rabbit.IOnline/Views/Shared/_Layout.cshtml
@@ -49,5 +49,5 @@
         @RenderBody()
     </div>
 </body>
-@Html.GetRemoteContent((string)ViewBag.AdFileUri)
+@*@Html.GetRemoteContent((string)ViewBag.AdFileUri)*@
 </html>
