--- a/Rabbit.IOnline/Views/Home/Index.cshtml
+++ b/Rabbit.IOnline/Views/Home/Index.cshtml
@@ -18,10 +18,18 @@
         @{ Html.RenderAction("SiteCredits", "Home"); }
     </div>
     <div class="pull-left width-70p">
+        <h3>Recent messages</h3>
+        <div id="recent-msgs"></div>
         <h3>Write a message <small>of whatever you want to leave</small></h3>
         <div>
             @{Html.RenderPartial("_MessageEditForm", Model.EditMessageViewModel);}
         </div>
     </div>
 </div>
-
+<script type="text/javascript">
+    $(function () {
+        $.get('@Url.Action("List", "Message")', function (data) {
+            $("#recent-msgs").html(data);
+        });
+    });
+</script>
