--- a/Rabbit.IOnline/Views/Shared/_Layout.cshtml
+++ b/Rabbit.IOnline/Views/Shared/_Layout.cshtml
@@ -16,6 +16,8 @@
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/cssbox")
 
+    <link rel="stylesheet" href="//css-spinners.com/css/spinner/spinner.css" type="text/css">
+
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jquery-unobtrusive-ajax")
     @Scripts.Render("~/bundles/showdown")
