--- a/Rabbit.IOnline/Views/Shared/_Layout.cshtml
+++ b/Rabbit.IOnline/Views/Shared/_Layout.cshtml
@@ -1,9 +1,10 @@
-﻿@using Rabbit.Helper
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <meta name="google-site-verification" content="xBRn3H-MNtgGpE_F4VrYdc2UeVoxMv0qWJsLKStZn7E" />
+
     <title>@ViewBag.Title</title>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -49,5 +50,4 @@
         @RenderBody()
     </div>
 </body>
-@*@Html.GetRemoteContent((string)ViewBag.AdFileUri)*@
 </html>
