Add validation tag for Bing

--- a/Rabbit.IOnline/Views/Shared/_Layout.cshtml
+++ b/Rabbit.IOnline/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="google-site-verification" content="xBRn3H-MNtgGpE_F4VrYdc2UeVoxMv0qWJsLKStZn7E" />
+    <meta name="msvalidate.01" content="761C6308EB0B643730E23CB396E5C3FC" />
 
     <title>@ViewBag.Title</title>
 
