--- a/Rabbit.IOnline/Views/Shared/_Layout.cshtml
+++ b/Rabbit.IOnline/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Rabbit.Helper
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -51,4 +52,5 @@
         @RenderBody()
     </div>
 </body>
+@Html.GetRemoteContent((string)ViewBag.AdFileUri)
 </html>
