Add link for Category column on Messages list

--- a/Rabbit.IOnline/Views/Home/Index.cshtml
+++ b/Rabbit.IOnline/Views/Home/Index.cshtml
@@ -7,13 +7,12 @@
 @model IndexViewModel
 
 <div class="clearfix">
-    <div class="well well-sm padding-10 pull-left width-30p">
+    <div class="well well-sm padding-10 pull-left width-70p">
         <p class="text-justify">
             A public place which stores your message of anything. You can leave a message there and it will be kept for so long.
         </p>
     </div>
-    <div class="pull-left width-70p">
-        <h3>Site credits</h3>
+    <div class="pull-left width-30p margin-20">
         @{ Html.RenderAction("SiteCredits", "Home"); }
     </div>
 </div>
