Update width of the container Update SiteCredits.cshtml Update EditForm by two columns

--- a/Rabbit.IOnline/Views/Home/SiteCredits.cshtml
+++ b/Rabbit.IOnline/Views/Home/SiteCredits.cshtml
@@ -2,7 +2,7 @@
 @model SiteCreditsViewModel
 
 <div>
-    <a href="@Url.Action("List", "Message")">All messages
+    <a href="@Url.Action("List", "Message")" class="label label-primary">All messages
         <span class="badge">@Model.MessageCount</span>
     </a>
 
