--- a/Rabbit.IOnline/Views/Home/Index.cshtml
+++ b/Rabbit.IOnline/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
             A public place which stores your message of anything. You can leave a message there and it will be kept for so long.
         </p>
     </div>
-    <div class="well well-sm pull-left width-30p">
+    <div class="well well-sm pull-left width-30p" style="margin-left: 10px;">
         @{ Html.RenderAction("SiteCredits", "Home"); }
     </div>
 </div>
